--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,11 @@ colorama==0.4.3
 coverage==5.3
 cryptography==3.2.1
 decorator==4.4.2
+dj-database-url==0.5.0
 Django==3.1.4
 django-cors-headers==3.6.0
 django-crispy-forms==1.10.0
+django-heroku==0.3.1
 docker==4.3.1
 docker-compose==1.25.5
 dockerpty==0.4.1
@@ -32,6 +34,7 @@ google-auth-oauthlib==0.4.2
 googlemaps==4.4.2
 green==3.2.2
 gspread==3.6.0
+gunicorn==20.0.4
 idna==2.10
 importlib-metadata==3.3.0
 ipdb==0.13.4
@@ -88,5 +91,6 @@ Unidecode==1.1.1
 urllib3==1.25.11
 wcwidth==0.1.9
 websocket-client==0.57.0
+whitenoise==5.2.0
 wrapt==1.12.1
 zipp==3.4.0
