--- a/requirements.txt
+++ b/requirements.txt
@@ -38,8 +38,8 @@ gunicorn==20.0.4
 idna==2.10
 importlib-metadata==3.3.0
 ipdb==0.13.4
-ipython==7.18.1
-ipython-genutils==0.2.0
+# ipython==7.18.1
+# ipython-genutils==0.2.0
 isort==5.5.4
 jedi==0.17.2
 jmespath==0.10.0
